USB Host support stub. Doesn't work.

--- a/arch/esp32/esp32s2.ini
+++ b/arch/esp32/esp32s2.ini
@@ -14,3 +14,5 @@ lib_ignore =
   ${esp32_base.lib_ignore} 
   NimBLE-Arduino
 
+lib_deps = ${esp32_base.lib_deps}
+  tanakamasayuki/EspUsbHost@^1.0.2
