--- a/arch/esp32/esp32c3.ini
+++ b/arch/esp32/esp32c3.ini
@@ -3,3 +3,6 @@ extends = esp32_base
 
 monitor_speed = 115200
 monitor_filters = esp32_c3_exception_decoder
+
+lib_deps = ${esp32_base.lib_deps}
+  tanakamasayuki/EspUsbHost@^1.0.2
